syntax ="proto3";

package persistence.modules.metas.internal.key.v1beta1;

import "third_party/proto/gogoproto/gogo.proto";

option go_package = "modules/metas/internal/key";

message metaID {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;

  string typeID = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false] ;
  string hashID = 2 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false] ;
}
