syntax = "proto3";

package persistence.modules.metas.transactions.reveal.v1beta1;

import "third_party/proto/gogoproto/gogo.proto";
import "proto/persistence/cosmos/base/v1beta1/basereq.proto";

option go_package = "modules/metas/internal/transactions/reveal";

message transactionRequest {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;

  persistence.cosmos.base.v1beta1.BaseReq baseReq =1 [(gogoproto.nullable) = false];
  string metaFact = 2;
}
